@@ -35,7 +35,3 @@
 127.0.0.1 kalasa
 ::1 kalasa
 
-
-
-
-
