@@ -1,0 +1,7 @@
+2020-04-16_11:14:35_blocked domain
+2020-04-16_11:20:12_blocked_random.domain
+2020-04-16_11:43:13_unblocked_random.domain
+2020-04-16_12:00:32_failed_to_block_www.random.com
+Error:Access denied
+2020-04-16_12:03:18_failed_to_block_www.random.com
+Error:Access denied
