@@ -20,3 +20,7 @@
   * bugs fixed
     - works on linux os
     - hosts file with domains separated by '\t' problem resolved
+
+# w3b13locker beta v0.3 :
+  - compatible on mac os
+  - working log file @ data/log.ini which holds all logs
